# flake8-docstrings-complete

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yaml
flake8_docstrings_complete/: __init__.py  args.py  attrs.py  constants.py  docstring.py  raises.py  types_.py
tests/: test___init___integration.py  test___init___unit.py  test_docstring.py
tests/integration/: test___init__.py
tests/unit/: result.py  test___init__.py  test___init__args.py  test___init__attrs.py  test___init__raises.py
